--- a/style.css
+++ b/style.css
@@ -84,3 +84,8 @@ a{
     text-decoration: none;
     font-weight: bold;
 }
+p{
+    text-align:center;
+    color:red;
+    text-decoration:underline;
+}
